# stt-tts-agent-tools

./: README.md  main_stt.py  main_tts.py  pyproject.toml
audio/: audio.webm
text/: test.txt
tools/: stt.py  stt_sdk.py  stt_sdk_async.py  tts.py  tts_sdk.py  tts_sdk_async.py  txt_file_reader.py
